--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="styles.css">
-        <title>CIS GPA Calculator</title>
+        <title>GPA Calculator</title>
     </head>
     <body>
         <br><br>
